# Diagnosify-LLM-Powered-Medical-Report-Insights

./: .env.example  Dockerfile  Home.py  README.md  app.py  pyproject.toml  requirements.txt  structure.graphql
assets/: snippet.txt
pages/: README.md  ⚖️_RAGAS_Evaluation.py  🤖_Assistant.py  🧐_Analyze.py
scripts/: README.md  config.py  ocr.py  pdf_generator.py  processing.py  ragas_evaluator.py  utils.py
src/: README.md  categorize.py  chatbot.py  config.py  explain.py  nlp.py  ocr.py  pdf_generator.py  preprocess.py  summary.py  table_formatter.py  utils.py
