[project]
name = "diagnosify-llm-powered-medical-report-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.11",
    "opencv-python>=4.12.0.88",
    "pymongo>=4.14.1",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.2",
    "reportlab>=4.4.3",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
